cabal-version:       2.4
name:                Curve25519
version:             0.0.0.0
synopsis:            A Pure Haskell iomplementation of Curve25519
description:         A Pure Haskell iomplementation of Curve25519
homepage:            https://github.com/axman6/Curve25519
bug-reports:         https://github.com/axman6/Curve25519/issues
license:             MIT
license-file:        LICENSE
author:              Alex Mason
maintainer:          Alex Mason <github@me.axman6.com>
copyright:           2020 Alex Mason
category:            Crypto
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/axman6/Curve25519.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                      , base16-bytestring
                      , bytestring
                      , ghc-prim
                      , primitive
                      , vector

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       ScopedTypeVariables
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Curve25519, Curve25519Bytes

executable Curve25519
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       Curve25519
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite Curve25519-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Curve25519
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark Curve25519-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , Curve25519
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
